...
internal const val SHOW_AGENDA_SWITCH_TAG = "show_agenda_switch"
internal const val CONTACT_SEARCH_SWITCH_TAG = "contact_search_switch"
internal const val CALENDAR_SEARCH_SWITCH_TAG = "calendar_search_switch"
internal const val ANALYTICS_SWITCH_TAG = "analytics_switch"
internal const val DOCK_RECENTS_SCROLL_START_CHEVRON_TAG = "dock_recents_scroll_start_chevron"
internal const val DOCK_RECENTS_SCROLL_END_CHEVRON_TAG = "dock_recents_scroll_end_chevron"
internal const val APPS_LIST_SCROLL_TOP_CHEVRON_TAG = "apps_list_scroll_top_chevron"
internal const val APPS_LIST_SCROLL_BOTTOM_CHEVRON_TAG = "apps_list_scroll_bottom_chevron"
internal const val SETTINGS_SCROLL_TOP_CHEVRON_TAG = "settings_scroll_top_chevron"
internal const val SETTINGS_SCROLL_BOTTOM_CHEVRON_TAG = "settings_scroll_bottom_chevron"
internal const val DOCK_FOLDER_SCROLL_TOP_CHEVRON_TAG = "dock_folder_scroll_top_chevron"
internal const val DOCK_FOLDER_SCROLL_BOTTOM_CHEVRON_TAG = "dock_folder_scroll_bottom_chevron"
internal const val AGENDA_PERMISSION_TAG = "agenda_permission"
internal const val AGENDA_EMPTY_TAG = "agenda_empty"
...
